<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="org.sopt.sample.presentation.login.SignUpViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.login.SignUpActivity">

        <TextView
            android:id="@+id/tv_sign_up_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/sign_up"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_sign_up_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="30dp"
            android:text="@string/id"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_sign_up_title" />

        <EditText
            android:id="@+id/et_sign_up_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="20dp"
            android:hint="@string/sign_up_id_hint"
            android:inputType="text"
            android:text="@={vm.inputId}"
            app:layout_constraintTop_toBottomOf="@id/tv_sign_up_id" />

        <TextView
            android:id="@+id/tv_sign_up_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="24dp"
            android:text="@string/pwd"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_sign_up_id" />

        <EditText
            android:id="@+id/et_sign_up_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="20dp"
            android:hint="@string/sign_up_pwd_hint"
            android:inputType="text"
            android:text="@={vm.inputPwd}"
            app:layout_constraintTop_toBottomOf="@id/tv_sign_up_pwd" />

        <TextView
            android:id="@+id/tv_sign_up_mbti"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="24dp"
            android:text="@string/mbti"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_sign_up_pwd" />

        <EditText
            android:id="@+id/et_sign_up_mbti"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="20dp"
            android:hint="@string/mbti_hint"
            android:inputType="textCapCharacters"
            android:maxLength="4"
            android:text="@={vm.inputMbti}"
            app:layout_constraintTop_toBottomOf="@id/tv_sign_up_mbti" />

        <Button
            android:id="@+id/btn_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="20dp"
            android:enabled="@{vm.inputId.length() > 0 &amp;&amp; vm.inputPwd.length() > 0 &amp;&amp; vm.inputMbti.length() > 0}"
            android:onClick="@{()->vm.signUpOnClick()}"
            android:text="@string/sign_up_complete"
            app:layout_constraintTop_toBottomOf="@id/et_sign_up_mbti" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>